welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit : Int = 0 ;


while (estSurBiscuit==true){
	nbBiscuit = nbBiscuit + 1 ;
}

while(nbBiscuit < 4 ){
	avance();
}
while(nbBiscuit=4){
	
}
